@@ -173,7 +173,11 @@ class _IntConverter(BaseConverter):
         """Convert a float to a string"""
         if format is None:
             format = '%d'
-        return lformat(format, value)
+
+        # Do not use lformat here, since an integer should always
+        # be formatted without thousand separators. Think of the
+        # use case of a port number, "3128" is desired, and not "3,128"
+        return format % value
 
     def from_string(self, value):
         "Convert a string to an integer"
